--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,14 @@
 export("anchors<-")
 export("regions<-")
 export(GenomicInteractions)
+export(SimpleGenomicInteractions)
 export(anchors)
 export(boundingBox)
 export(intrachr)
 export(pairdist)
 export(regions)
 exportClasses(GenomicInteractions)
+exportClasses(SimpleGenomicInteractions)
 exportMethods("anchors<-")
 exportMethods("first<-")
 exportMethods("regions<-")
@@ -26,7 +28,9 @@ importClassesFrom(IndexedRelations,IndexedRelations)
 importFrom(Biobase,updateObject)
 importFrom(BiocGenerics,end)
 importFrom(BiocGenerics,getObjectSlots)
+importFrom(BiocGenerics,match)
 importFrom(BiocGenerics,start)
+importFrom(BiocGenerics,unique)
 importFrom(GenomeInfoDb,seqinfo)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicRanges,GRanges)
