--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,14 +3,14 @@
 export("anchors<-")
 export("regions<-")
 export(GenomicInteractions)
-export(SimpleGenomicInteractions)
+export(GenomicInteractions0)
 export(anchors)
 export(boundingBox)
 export(intrachr)
 export(pairdist)
 export(regions)
 exportClasses(GenomicInteractions)
-exportClasses(SimpleGenomicInteractions)
+exportClasses(GenomicInteractions0)
 exportMethods("anchors<-")
 exportMethods("first<-")
 exportMethods("regions<-")
@@ -25,12 +25,12 @@ exportMethods(updateObject)
 import(methods)
 importClassesFrom(GenomicRanges,GenomicRanges)
 importClassesFrom(IndexedRelations,IndexedRelations)
-importFrom(Biobase,updateObject)
 importFrom(BiocGenerics,end)
 importFrom(BiocGenerics,getObjectSlots)
 importFrom(BiocGenerics,match)
 importFrom(BiocGenerics,start)
 importFrom(BiocGenerics,unique)
+importFrom(BiocGenerics,updateObject)
 importFrom(GenomeInfoDb,seqinfo)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicRanges,GRanges)
@@ -45,6 +45,7 @@ importFrom(IndexedRelations,partners)
 importFrom(Rcpp,sourceCpp)
 importFrom(S4Vectors,"first<-")
 importFrom(S4Vectors,"mcols<-")
+importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,"second<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,List)
