Recompiled Rcpp attributes, reoxygenated.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ exportMethods("regions<-")
 exportMethods("second<-")
 exportMethods(anchors)
 exportMethods(boundingBox)
+exportMethods(findOverlaps)
 exportMethods(first)
 exportMethods(pairdist)
 exportMethods(regions)
@@ -27,14 +28,18 @@ importClassesFrom(GenomicRanges,GenomicRanges)
 importClassesFrom(IndexedRelations,IndexedRelations)
 importFrom(BiocGenerics,end)
 importFrom(BiocGenerics,getObjectSlots)
+importFrom(BiocGenerics,intersect)
 importFrom(BiocGenerics,match)
+importFrom(BiocGenerics,sort)
 importFrom(BiocGenerics,start)
+importFrom(BiocGenerics,union)
 importFrom(BiocGenerics,unique)
 importFrom(BiocGenerics,updateObject)
 importFrom(GenomeInfoDb,seqinfo)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
+importFrom(IRanges,findOverlaps)
 importFrom(IndexedRelations,"featureSets<-")
 importFrom(IndexedRelations,"partnerFeatures<-")
 importFrom(IndexedRelations,IndexedRelations)
@@ -48,8 +53,13 @@ importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,"second<-")
 importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,Hits)
 importFrom(S4Vectors,List)
 importFrom(S4Vectors,first)
+importFrom(S4Vectors,merge)
+importFrom(S4Vectors,queryHits)
 importFrom(S4Vectors,second)
+importFrom(S4Vectors,selectHits)
 importFrom(S4Vectors,setValidity2)
+importFrom(S4Vectors,subjectHits)
 useDynLib(GenomicInteractions)
