Reoxygenated, recompiled Rcpp attributes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,6 @@ importClassesFrom(GenomicRanges,GenomicRanges)
 importClassesFrom(IndexedRelations,IndexedRelations)
 importFrom(BiocGenerics,end)
 importFrom(BiocGenerics,getObjectSlots)
-importFrom(BiocGenerics,intersect)
 importFrom(BiocGenerics,match)
 importFrom(BiocGenerics,sort)
 importFrom(BiocGenerics,start)
@@ -62,4 +61,5 @@ importFrom(S4Vectors,second)
 importFrom(S4Vectors,selectHits)
 importFrom(S4Vectors,setValidity2)
 importFrom(S4Vectors,subjectHits)
+importMethodsFrom(IRanges,findOverlaps)
 useDynLib(GenomicInteractions)
