--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(GenomicInteractions0)
 export(anchors)
 export(boundingBox)
 export(intrachr)
+export(linkOverlaps)
 export(pairdist)
 export(regions)
 exportClasses(GenomicInteractions)
@@ -19,6 +20,7 @@ exportMethods(anchors)
 exportMethods(boundingBox)
 exportMethods(findOverlaps)
 exportMethods(first)
+exportMethods(linkOverlaps)
 exportMethods(pairdist)
 exportMethods(regions)
 exportMethods(second)
@@ -29,6 +31,7 @@ importClassesFrom(IndexedRelations,IndexedRelations)
 importFrom(BiocGenerics,end)
 importFrom(BiocGenerics,getObjectSlots)
 importFrom(BiocGenerics,match)
+importFrom(BiocGenerics,rbind)
 importFrom(BiocGenerics,sort)
 importFrom(BiocGenerics,start)
 importFrom(BiocGenerics,union)
