--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(intrachr)
 export(linkOverlaps)
 export(pairdist)
 export(regions)
+export(swapAnchors)
 exportClasses(GenomicInteractions)
 exportClasses(GenomicInteractions0)
 exportMethods("anchors<-")
@@ -24,6 +25,7 @@ exportMethods(linkOverlaps)
 exportMethods(pairdist)
 exportMethods(regions)
 exportMethods(second)
+exportMethods(swapAnchors)
 exportMethods(updateObject)
 import(methods)
 importClassesFrom(GenomicRanges,GenomicRanges)
@@ -44,11 +46,14 @@ importFrom(IRanges,IRanges)
 importFrom(IRanges,findOverlaps)
 importFrom(IndexedRelations,"featureSets<-")
 importFrom(IndexedRelations,"partnerFeatures<-")
+importFrom(IndexedRelations,"partners<-")
 importFrom(IndexedRelations,IndexedRelations)
 importFrom(IndexedRelations,featureSets)
 importFrom(IndexedRelations,mapping)
 importFrom(IndexedRelations,partnerFeatures)
 importFrom(IndexedRelations,partners)
+importFrom(IndexedRelations,rearrangePartners)
+importFrom(IndexedRelations,standardizeFeatureSets)
 importFrom(Rcpp,sourceCpp)
 importFrom(S4Vectors,"first<-")
 importFrom(S4Vectors,"mcols<-")
