--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(GenomicInteractions)
 export(GenomicInteractions0)
 export(anchors)
 export(boundingBox)
+export(findDistalAnchors)
 export(intrachr)
 export(linkOverlaps)
 export(pairdist)
@@ -19,6 +20,7 @@ exportMethods("regions<-")
 exportMethods("second<-")
 exportMethods(anchors)
 exportMethods(boundingBox)
+exportMethods(findDistalAnchors)
 exportMethods(findOverlaps)
 exportMethods(first)
 exportMethods(linkOverlaps)
@@ -42,12 +44,14 @@ importFrom(BiocGenerics,updateObject)
 importFrom(GenomeInfoDb,seqinfo)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicRanges,GRanges)
+importFrom(GenomicRanges,findOverlaps)
 importFrom(IRanges,IRanges)
 importFrom(IRanges,findOverlaps)
 importFrom(IndexedRelations,"featureSets<-")
 importFrom(IndexedRelations,"partnerFeatures<-")
 importFrom(IndexedRelations,"partners<-")
 importFrom(IndexedRelations,IndexedRelations)
+importFrom(IndexedRelations,featureSetByPartner)
 importFrom(IndexedRelations,featureSets)
 importFrom(IndexedRelations,mapping)
 importFrom(IndexedRelations,partnerFeatures)
@@ -63,6 +67,7 @@ importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,Hits)
 importFrom(S4Vectors,List)
 importFrom(S4Vectors,first)
+importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,merge)
 importFrom(S4Vectors,queryHits)
 importFrom(S4Vectors,second)
