--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,18 +2,18 @@
 
 export("anchors<-")
 export("regions<-")
+export()
 export(GenomicInteractions)
-export(GenomicInteractions0)
 export(anchors)
 export(boundingBox)
 export(findDistalAnchors)
 export(intrachr)
 export(linkOverlaps)
+export(makeGInteractionsFromGRangesPairs)
 export(pairdist)
 export(regions)
 export(swapAnchors)
 exportClasses(GenomicInteractions)
-exportClasses(GenomicInteractions0)
 exportMethods("anchors<-")
 exportMethods("first<-")
 exportMethods("regions<-")
@@ -32,6 +32,8 @@ exportMethods(updateObject)
 import(methods)
 importClassesFrom(GenomicRanges,GenomicRanges)
 importClassesFrom(IndexedRelations,IndexedRelations)
+importClassesFrom(S4Vectors,DataFrame)
+importClassesFrom(S4Vectors,Pairs)
 importFrom(BiocGenerics,end)
 importFrom(BiocGenerics,getObjectSlots)
 importFrom(BiocGenerics,match)
@@ -51,9 +53,7 @@ importFrom(IndexedRelations,"featureSets<-")
 importFrom(IndexedRelations,"partnerFeatures<-")
 importFrom(IndexedRelations,"partners<-")
 importFrom(IndexedRelations,IndexedRelations)
-importFrom(IndexedRelations,featureSetByPartner)
 importFrom(IndexedRelations,featureSets)
-importFrom(IndexedRelations,mapping)
 importFrom(IndexedRelations,partnerFeatures)
 importFrom(IndexedRelations,partners)
 importFrom(IndexedRelations,rearrangePartners)
@@ -66,6 +66,7 @@ importFrom(S4Vectors,"second<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,Hits)
 importFrom(S4Vectors,List)
+importFrom(S4Vectors,Pairs)
 importFrom(S4Vectors,first)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,merge)
