--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,10 +50,12 @@ importFrom(IRanges,IRanges)
 importFrom(IRanges,findOverlaps)
 importFrom(IndexedRelations,"featureSets<-")
 importFrom(IndexedRelations,"partnerFeatures<-")
+importFrom(IndexedRelations,"partnerNames<-")
 importFrom(IndexedRelations,"partners<-")
 importFrom(IndexedRelations,IndexedRelations)
 importFrom(IndexedRelations,featureSets)
 importFrom(IndexedRelations,partnerFeatures)
+importFrom(IndexedRelations,partnerNames)
 importFrom(IndexedRelations,partners)
 importFrom(IndexedRelations,rearrangePartners)
 importFrom(IndexedRelations,standardizeFeatureSets)
