--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,9 +45,9 @@ importFrom(BiocGenerics,updateObject)
 importFrom(GenomeInfoDb,seqinfo)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicRanges,GRanges)
-importFrom(GenomicRanges,findOverlaps)
 importFrom(IRanges,IRanges)
 importFrom(IRanges,findOverlaps)
+importFrom(IRanges,overlapsAny)
 importFrom(IndexedRelations,"featureSets<-")
 importFrom(IndexedRelations,"partnerFeatures<-")
 importFrom(IndexedRelations,"partnerNames<-")
