--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ exportMethods("anchors<-")
 exportMethods("first<-")
 exportMethods("regions<-")
 exportMethods("second<-")
+exportMethods(GenomicInteractions)
 exportMethods(anchors)
 exportMethods(boundingBox)
 exportMethods(findDistalAnchors)
@@ -26,13 +27,13 @@ exportMethods(linkOverlaps)
 exportMethods(pairdist)
 exportMethods(regions)
 exportMethods(second)
+exportMethods(show)
 exportMethods(swapAnchors)
 exportMethods(updateObject)
 import(methods)
-importClassesFrom(GenomicRanges,GenomicRanges)
-importClassesFrom(IndexedRelations,IndexedRelations)
-importClassesFrom(S4Vectors,DataFrame)
+importClassesFrom(GenomicRanges,GRangesFactor)
 importClassesFrom(S4Vectors,Pairs)
+importClassesFrom(S4Vectors,Vector)
 importFrom(BiocGenerics,end)
 importFrom(BiocGenerics,getObjectSlots)
 importFrom(BiocGenerics,match)
@@ -45,16 +46,13 @@ importFrom(BiocGenerics,updateObject)
 importFrom(GenomeInfoDb,seqinfo)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicRanges,GRanges)
+importFrom(GenomicRanges,GRangesFactor)
 importFrom(IRanges,IRanges)
 importFrom(IRanges,findOverlaps)
 importFrom(IRanges,overlapsAny)
-importFrom(IndexedRelations,"featureSets<-")
-importFrom(IndexedRelations,"partnerFeatures<-")
 importFrom(IndexedRelations,"partnerNames<-")
 importFrom(IndexedRelations,"partners<-")
-importFrom(IndexedRelations,IndexedRelations)
 importFrom(IndexedRelations,featureSets)
-importFrom(IndexedRelations,partnerFeatures)
 importFrom(IndexedRelations,partnerNames)
 importFrom(IndexedRelations,partners)
 importFrom(IndexedRelations,rearrangePartners)
@@ -66,15 +64,18 @@ importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,"second<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,Hits)
-importFrom(S4Vectors,List)
 importFrom(S4Vectors,Pairs)
+importFrom(S4Vectors,SimpleList)
 importFrom(S4Vectors,first)
+importFrom(S4Vectors,levels)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,merge)
+importFrom(S4Vectors,parallelSlotNames)
 importFrom(S4Vectors,queryHits)
 importFrom(S4Vectors,second)
 importFrom(S4Vectors,selectHits)
-importFrom(S4Vectors,setValidity2)
+importFrom(S4Vectors,showAsCell)
 importFrom(S4Vectors,subjectHits)
+importFrom(methods,show)
 importMethodsFrom(IRanges,findOverlaps)
 useDynLib(GenomicInteractions)
