--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,8 +24,11 @@ exportMethods(findDistalAnchors)
 exportMethods(findOverlaps)
 exportMethods(first)
 exportMethods(linkOverlaps)
+exportMethods(order)
 exportMethods(pairdist)
+exportMethods(pcompare)
 exportMethods(regions)
+exportMethods(sameAsPreviousROW)
 exportMethods(second)
 exportMethods(show)
 exportMethods(swapAnchors)
@@ -37,6 +40,7 @@ importClassesFrom(S4Vectors,Vector)
 importFrom(BiocGenerics,end)
 importFrom(BiocGenerics,getObjectSlots)
 importFrom(BiocGenerics,match)
+importFrom(BiocGenerics,order)
 importFrom(BiocGenerics,rbind)
 importFrom(BiocGenerics,sort)
 importFrom(BiocGenerics,start)
@@ -63,6 +67,7 @@ importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,"second<-")
 importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,Factor)
 importFrom(S4Vectors,Hits)
 importFrom(S4Vectors,Pairs)
 importFrom(S4Vectors,SimpleList)
@@ -71,7 +76,9 @@ importFrom(S4Vectors,levels)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,merge)
 importFrom(S4Vectors,parallelSlotNames)
+importFrom(S4Vectors,pcompare)
 importFrom(S4Vectors,queryHits)
+importFrom(S4Vectors,sameAsPreviousROW)
 importFrom(S4Vectors,second)
 importFrom(S4Vectors,selectHits)
 importFrom(S4Vectors,showAsCell)
