--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(pairdist)
 export(regions)
 export(swapAnchors)
 exportClasses(GenomicInteractions)
+exportMethods("$")
+exportMethods("$<-")
 exportMethods("anchors<-")
 exportMethods("first<-")
 exportMethods("regions<-")
@@ -22,25 +24,21 @@ exportMethods(anchors)
 exportMethods(boundingBox)
 exportMethods(findDistalAnchors)
 exportMethods(findOverlaps)
-exportMethods(first)
 exportMethods(linkOverlaps)
-exportMethods(order)
 exportMethods(pairdist)
-exportMethods(pcompare)
 exportMethods(regions)
-exportMethods(sameAsPreviousROW)
-exportMethods(second)
 exportMethods(show)
 exportMethods(swapAnchors)
 exportMethods(updateObject)
 import(methods)
+importClassesFrom(GenomicRanges,GRanges)
 importClassesFrom(GenomicRanges,GRangesFactor)
 importClassesFrom(S4Vectors,Pairs)
-importClassesFrom(S4Vectors,Vector)
+importClassesFrom(S4Vectors,SortedByQueryHits)
 importFrom(BiocGenerics,end)
 importFrom(BiocGenerics,getObjectSlots)
+importFrom(BiocGenerics,intersect)
 importFrom(BiocGenerics,match)
-importFrom(BiocGenerics,order)
 importFrom(BiocGenerics,rbind)
 importFrom(BiocGenerics,sort)
 importFrom(BiocGenerics,start)
@@ -54,13 +52,6 @@ importFrom(GenomicRanges,GRangesFactor)
 importFrom(IRanges,IRanges)
 importFrom(IRanges,findOverlaps)
 importFrom(IRanges,overlapsAny)
-importFrom(IndexedRelations,"partnerNames<-")
-importFrom(IndexedRelations,"partners<-")
-importFrom(IndexedRelations,featureSets)
-importFrom(IndexedRelations,partnerNames)
-importFrom(IndexedRelations,partners)
-importFrom(IndexedRelations,rearrangePartners)
-importFrom(IndexedRelations,standardizeFeatureSets)
 importFrom(Rcpp,sourceCpp)
 importFrom(S4Vectors,"first<-")
 importFrom(S4Vectors,"mcols<-")
@@ -68,21 +59,24 @@ importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,"second<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,Factor)
-importFrom(S4Vectors,Hits)
 importFrom(S4Vectors,Pairs)
 importFrom(S4Vectors,SimpleList)
+importFrom(S4Vectors,findMatches)
 importFrom(S4Vectors,first)
 importFrom(S4Vectors,levels)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,merge)
 importFrom(S4Vectors,parallelSlotNames)
-importFrom(S4Vectors,pcompare)
 importFrom(S4Vectors,queryHits)
-importFrom(S4Vectors,sameAsPreviousROW)
 importFrom(S4Vectors,second)
 importFrom(S4Vectors,selectHits)
 importFrom(S4Vectors,showAsCell)
 importFrom(S4Vectors,subjectHits)
+importFrom(S4Vectors,unfactor)
+importFrom(methods,as)
+importFrom(methods,is)
 importFrom(methods,show)
+importFrom(utils,head)
+importFrom(utils,tail)
 importMethodsFrom(IRanges,findOverlaps)
 useDynLib(GenomicInteractions)
